[gd_scene load_steps=4 format=3 uid="uid://dgtxcx5c1j1f6"]

[ext_resource type="Texture2D" uid="uid://c3sduwab6njkt" path="res://assets/sprites/ui/pause_menu_bg.png" id="1_jpdlf"]
[ext_resource type="Script" uid="uid://bva3o4s05w1ih" path="res://game/menus/pause_menu.gd" id="1_k2nca"]
[ext_resource type="PackedScene" uid="uid://diqpykxpvm737" path="res://game/menus/component/custom_menu_button.tscn" id="2_7asoo"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k2nca")

[node name="Filter" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)

[node name="MenuAnchor" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Background" type="TextureRect" parent="MenuAnchor"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -977.0
offset_top = -1080.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_jpdlf")

[node name="ButtonContainer" type="HBoxContainer" parent="MenuAnchor/Background"]
layout_mode = 0
offset_bottom = 496.0
rotation = 0.523599

[node name="Padding" type="Control" parent="MenuAnchor/Background/ButtonContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuAnchor/Background/ButtonContainer"]
layout_mode = 2

[node name="Padding1" type="Control" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="ButtonHolder1" type="Control" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer/ButtonHolder1"]
layout_mode = 2
offset_top = 3.99997
offset_right = 4.0
offset_bottom = 3.99997
rotation = -0.523599

[node name="Padding" type="Control" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer/ButtonHolder1/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ResumeButton" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer/ButtonHolder1/HBoxContainer" instance=ExtResource("2_7asoo")]
unique_name_in_owner = true
layout_mode = 2
button_text = "RESUME"

[node name="Padding2" type="Control" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2

[node name="ButtonHolder2" type="Control" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer/ButtonHolder2"]
layout_mode = 2
offset_top = 3.99997
offset_right = 4.0
offset_bottom = 3.99997
rotation = -0.523599

[node name="Padding" type="Control" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer/ButtonHolder2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="RestartButton" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer/ButtonHolder2/HBoxContainer" instance=ExtResource("2_7asoo")]
unique_name_in_owner = true
layout_mode = 2
button_text = "RESTART"

[node name="Padding3" type="Control" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2

[node name="ButtonHolder3" type="Control" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer/ButtonHolder3"]
layout_mode = 2
offset_top = 3.99997
offset_right = 4.0
offset_bottom = 3.99997
rotation = -0.523599

[node name="Padding" type="Control" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer/ButtonHolder3/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="QuitButton" parent="MenuAnchor/Background/ButtonContainer/VBoxContainer/ButtonHolder3/HBoxContainer" instance=ExtResource("2_7asoo")]
unique_name_in_owner = true
layout_mode = 2
button_text = "QUIT"
